compiler/tests/success/common/stack_to_reg.jazz
export
fn stack_to_reg(reg u32 a b c d e f g h i) -> reg u32 {
  // stack
  reg u32 r;
  r = a;
  r += b;
  r += c;
  r += d;
  r += e;
  r += f;
  r += g;
  r += h;
  r += i;
  return r; /*
  reg u32 x;
  x = r;
  return x;
  */
}
