compiler/tests/fail/register_allocation/x86-64/too_many_large_args.jazz
export
fn too_many_args(reg u256 a b c d e f g h i) {}
